# traffic-streaming-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.dashboard  Dockerfile.producer  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: README.md  default.yaml
docs/: architecture.md  docker-cheatsheet.md  hellas.bst  references.bib  report.tex
scripts/: README.md  run_consumer.py  verify_pipeline.py
src/traffic_pipeline/: README.md  __init__.py
src/traffic_pipeline/dashboard/: README.md  __init__.py  app.py  network_geometry.py
src/traffic_pipeline/evaluation/: README.md  __init__.py  mongo_inspector.py  sample_queries.py
src/traffic_pipeline/ingestion/: README.md  __init__.py  kafka_publisher.py  kafka_source.py  mongo_sink.py  spark_session.py  traffic_simulator.py  uxsim_network.py
src/traffic_pipeline/models/: README.md  __init__.py  link_stats.py  windowed_stats.py
src/traffic_pipeline/preprocessing/: README.md  __init__.py  schemas.py  stream_parser.py
src/traffic_pipeline/serving/: README.md  __init__.py  api.py  repository.py
tests/: README.md  conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_dashboard_geometry.py  test_kafka_publisher.py  test_link_stats.py  test_repository.py  test_schemas.py  test_windowed_stats.py
